src/test/ui/deprecation/deprecation-in-staged-api.stderr
error: `#[deprecated]` cannot be used in staged API; use `#[rustc_deprecated]` instead
  --> $DIR/deprecation-in-staged-api.rs:8:1
   |
LL | fn main() { }
   | ^^^^^^^^^^^^^

error: aborting due to previous error

